<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/fondo"
android:orientation="vertical"
android:name=".MainActivity"    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />
</LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="152dp"
    android:layout_margin="30dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/email_inicio"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20dp"
        android:backgroundTint="@color/white"/>

    <EditText
        android:id="@+id/contra_inicio"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/Contra"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20dp"
        android:backgroundTint="@color/white"/>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="152dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_iniciarsesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton"
        android:onClick="iniciar"
        android:text="@string/inicio"
        android:textColor="#FFFFFF"
        android:textColorLink="#040303"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_aregistro"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/boton"
        android:gravity="center"
        android:onClick="irRegistro"
        android:text="@string/regis"
        android:textColor="#FFFFFF"
        android:textColorLink="#000000"
        android:textSize="18dp"
        app:iconTint="#3A2828" />
</LinearLayout>

</LinearLayout>